# myRTTrafficCam

./: .gitignore  CMakeLists.txt  README.md
script/: processStream.sh  startStream.sh
src/: processVideo.cc
